# aut-vale-alimentacao

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
project/: main.py  sender.py
